--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-parallax-tilt": "^1.7.237",
     "react-router-dom": "^6.30.0",
     "react-tilt": "^1.0.2",
